# bullbear-dashboard

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/bullbear_backend/: main.py
backend/bullbear_backend/api/: __init__.py
backend/bullbear_backend/core/: __init__.py
backend/bullbear_backend/data/providers/: __init__.py  binance.py
backend/bullbear_backend/data/sources/: ma.py
backend/tests/: README.md
docs/: STATE_MODEL.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  types.ts
