[tool.poetry]
name = "bullbear-backend"
version = "0.1.0"
description = "Backend API for the Bitcoin Crypto Market State Machine risk gauge."
authors = ["BullBear Dashboard Contributors"]
readme = "README.md"
packages = [{ include = "bullbear_backend" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { version = "^0.32.1", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


